@@ -255,6 +255,7 @@
 		<javacArgs>
 		  <javacArg>-Xlint:unchecked</javacArg>
 		  <javacArg>-Xlint:deprecation</javacArg>
+		  <javacArg>-XX:MaxPermSize=128M</javacArg>
 		</javacArgs>
 	      </configuration>
 	    </plugin>
@@ -270,33 +271,6 @@
                     <xmlOutput>true</xmlOutput>
                 </configuration>
             </plugin>
-
-
-            <!--
-                      <plugin>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>2.3.2</version>
-                        <dependencies>
-                          <dependency>
-                            <groupId>org.codehaus.groovy</groupId>
-                            <artifactId>groovy-eclipse-compiler</artifactId>
-                            <version>2.6.0-01</version>
-                          </dependency>
-                        </dependencies>
-                        <configuration>
-                          <compilerId>groovy-eclipse-compiler</compilerId>
-                           <source>1.6</source>
-                           <target>1.6</target>
-                        </configuration>
-                      </plugin>
-                      <plugin>
-                        <artifactId>groovy-eclipse-compiler</artifactId>
-                        <groupId>org.codehaus.groovy</groupId>
-                        <version>2.6.0-01</version>
-                        <extensions>true</extensions>
-                      </plugin>
-            -->
-
         </plugins>
 
         <extensions>
